--- a/journal/201902.md
+++ b/journal/201902.md
@@ -5,7 +5,7 @@
  
 عيد ميلاد سعيد، ديكريد! مرت ثلاث سنوات منذ تعدين [الكتلة الأولى](https://explorer.dcrdata.org/block/1) في 8 فبراير 2016. 
 
-شهد شهر فبراير الكثير من أنشطة بوليتييا حيث تم تقديم 7 مقترحات، وبدأ التصويت على 5 منها، كما تمت الموافقة على 4 منها في الأيام الأولى من شهر مارس. وقد تمت المصادقة رسميًا على إجمالي 490،000 دولار من ميزانية التسويق والفعاليات للفترة المتبقية من عام 2019 من قبل الناخبين.
+شهد شهر فبراير الكثير من أنشطة بوليتييا حيث تم تقديم 7 مقترحات، وبدأ التصويت على 5 منها، كما تمت الموافقة على 4 منها في الأيام الأولى من شهر مارس. وقد تمت المصادقة رسميًا على إجمالي 490,000 دولار من ميزانية التسويق والفعاليات للفترة المتبقية من عام 2019 من قبل الناخبين.
 
 تمت [ترقية](https://voting.decred.org/) الشبكة بشكل كافٍ للحصول على الإجماع اللازم لدعم الشبكة البرقية بالكامل، والمتوقع أن تبدأ في 14 من شهر مارس.
 
@@ -39,7 +39,7 @@
 
 [dcrdata](https://github.com/decred/dcrdata): تمت إضافة ميزة عرض بيانات [مقترحات بوليتيا](https://github.com/decred/dcrdata/pull/1016)، [تحويلات الأوراق النقدية]((https://github.com/decred/dcrdata/pull/1049)) (العرض ، الخزانة ، سعر التذكرة) ، [إعادة صياغة]((https://github.com/decred/dcrdata/pull/982)) صفحة الميمبول، النقاط النهائية للحصول على [الكتل الخام]((https://github.com/decred/dcrdata/pull/1032)) و[الترويسات الخام]((https://github.com/decred/dcrdata/pull/1035))، ومجموعة [الذاكرة المؤقتة]((https://github.com/decred/dcrdata/pull/1051)).
 
-[بدأت]((https://github.com/decred/dcrdata/issues/1022)) مناقشة كيفية حساب تكلفة %51  من الهجوم على dcrdata.
+[بدأت]((https://github.com/decred/dcrdata/issues/1022)) مناقشة كيفية حساب تكلفة 51٪   من الهجوم على dcrdata.
 
 [تقسيم التذاكر]((https://github.com/matheusd/dcr-split-ticket-matcher)): [شارك]((https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$1549497567273IPjZq:decred.org)) matheusd@ موقفه وبعض الخلفية وخططه لتقسيم التذاكر. كما سجل david@ [فيديو]((https://www.youtube.com/watch?v=9L8P7hL5v6w)) تعليمي  يشرح طريقة عمل الإعدادات.
 
@@ -83,33 +83,33 @@
 
 ## الإدارة
 
-في فبراير، تسلمت [الخزنة]((https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx)) 14878 DCR وأنفقت 17311 DCR، مما يجعله أول شهر بصافي إجمالي سلبي. باستخدام معدل المتوسط اليومي لشهر فبراير بDCR/USD والذي يقدر ب 16.51 دولارًا، ستكون الخزينة قد تسلمت 246 ألف دولارا وأنفقت 286 ألف دولارا. نظرًا لأن هذه المدفوعات كانت مخصصة للعمل الذي تم إنجازه في شهر يناير، فإنه من المفيد أيضًا أخذها بعين الاعتبار في سياق متوسط السعر اليومي لشهر يناير البالغ 17.06 دولار - وفي هذه الحالة ستبلغ الأرقام المستلمة / المنفقة بالدولار 254 ألف دولار / 295 ألف دولار.  اعتبارًا من 9 مارس، بلغ رصيد الخزينة 605828 DCR (أي ما يعادل 10.05 مليون دولار أمريكي بقيمة 16.6 دولارًا أمريكي).
+في فبراير، تسلمت [الخزنة]((https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx)) 14,878 DCR وأنفقت 17,311 DCR، مما يجعله أول شهر بصافي إجمالي سلبي. باستخدام معدل المتوسط اليومي لشهر فبراير بDCR/USD والذي يقدر ب 16.51 دولارًا، ستكون الخزينة قد تسلمت 246 ألف دولارا وأنفقت 286 ألف دولارا. نظرًا لأن هذه المدفوعات كانت مخصصة للعمل الذي تم إنجازه في شهر يناير، فإنه من المفيد أيضًا أخذها بعين الاعتبار في سياق متوسط السعر اليومي لشهر يناير البالغ 17.06 دولار - وفي هذه الحالة ستبلغ الأرقام المستلمة / المنفقة بالدولار 254 ألف دولار / 295 ألف دولار.  اعتبارًا من 9 مارس، بلغ رصيد الخزينة 605828 DCR (أي ما يعادل 10.05 مليون دولار أمريكي بقيمة 16.6 دولارًا أمريكي).
 
 حالة المقترحات اعتبارًا من 9 مارس:
 
 * تم رفض مقترح [لعبة بطاقات بايوند](https://proposals.decred.org/proposals/f545b359fcf1b40b356e9cb556cb422cc7ff01b628b577f804cdc45ce414f5dd) بنسبة تصويت 97٪ بلا  مع مشاركة 29 ٪ من التذاكر _(فوت في عدد يناير)_.  
 * تلقت [منصة التبادل اللامركزية RFP](https://proposals.decred.org/proposals/5431da8ff4eda8cdbf8f4f2e08566ffa573464b97ef6d6bae78e749f27800d3a) لjy-p@  إثنان و تمانون تعليقا على بوليتيا، [11 تعليقا](https://www.reddit.com/r/decred/comments/ancxgx/rfp_decred_decentralized_exchange_infrastructure/) على الريديت، وتنقيحان قللا من نطاق برنامج MVP وحدد سقف التكلفة بمبلغ 250 ألف دولار (أقل مليون دولار). نشر bee@ [تحليلا](https://github.com/xaur/decred-proposals/blob/master/decred-dex-rfp-analysis.md) شخصيا للإيجابيات والسلبيات. وحفز الاقتراح أيضا على [مناقشة](https://www.reddit.com/r/DCR/comments/awbtbr/should_treasury_funded_marketing_resources_be/) ما إذا كان ينبغي للخزانة أن تمول الترويج لمقترحات من هذا القبيل. بدأ التصويت بـ 91.4٪ نعم من أصل 8 آلاف صوت اعتبارًا من 9 مارس.
-* تم نشر [البرامج التعليمية للمحفظة](https://proposals.decred.org/proposals/a3def199af812b796887f4eae22e11e45f112b50c2e17252c60ed190933ec14f) من قبل Denni Lovejoy من Cryptocurrency Market بعد تكرارات متعددة وجمع التعليقات في [الدردشات](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154941035930084kFSjY:decred.org) و [الريديت](https://www.reddit.com/r/decred/comments/anksg2/proposed_statement_of_work_sow_for_decred/). تمت الموافقة على ميزانية 750 دولار بنسبة تصويت بلغت %80 بنعم ومشاركةالتذاكر بنسبة %24.
-* تم تقديم مقترح [تمويل الفعاليات لعام 2019](https://proposals.decred.org/proposals/d3e7f159b9680c059a3d4b398de2c8f6627108f28b7d61a3f10397acb4b5e509) بواسطة Dustorf@ بعد معاينات في [الدردشة](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$154896889724431Mxlvj:decred.org) و [الريديت](https://www.reddit.com/r/decred/comments/anhh8n/proposal_to_get_events_spending_approved_via/) و التي سبقت المقترح. التصويت انتهى بالموافقة على ميزانية 200 ألف دولار بنسبة أصوات بلغت %89 بنعم مع مشاركة %34 من تذاكر التصويت. 
+* تم نشر [البرامج التعليمية للمحفظة](https://proposals.decred.org/proposals/a3def199af812b796887f4eae22e11e45f112b50c2e17252c60ed190933ec14f) من قبل Denni Lovejoy من Cryptocurrency Market بعد تكرارات متعددة وجمع التعليقات في [الدردشات](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154941035930084kFSjY:decred.org) و [الريديت](https://www.reddit.com/r/decred/comments/anksg2/proposed_statement_of_work_sow_for_decred/). تمت الموافقة على ميزانية 750 دولار بنسبة تصويت بلغت 80٪  بنعم ومشاركةالتذاكر بنسبة 24٪.
+* تم تقديم مقترح [تمويل الفعاليات لعام 2019](https://proposals.decred.org/proposals/d3e7f159b9680c059a3d4b398de2c8f6627108f28b7d61a3f10397acb4b5e509) بواسطة Dustorf@ بعد معاينات في [الدردشة](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$154896889724431Mxlvj:decred.org) و [الريديت](https://www.reddit.com/r/decred/comments/anhh8n/proposal_to_get_events_spending_approved_via/) و التي سبقت المقترح. التصويت انتهى بالموافقة على ميزانية 200 ألف دولار بنسبة أصوات بلغت 89٪  بنعم مع مشاركة 34٪  من تذاكر التصويت. 
 * مقترح [لدمج الديكريد بالصراف الآلي](https://proposals.decred.org/proposals/aea224a561cfed183f514a9ac700d68ba8a6c71dfbee71208fb9bff5fffab51d) لoregonisaac@ هو نتيجة عدة أسابيع من البحث والمسودات والتعليقات منذ مناقشة [اقتراح](https://proposals.decred.org/proposals/bb7e19283d5c65fed598d5a2f4afcc2b5d2eab187b9cb84fc4304430f80b5ad1) الصراف الآلي لBcash في نوفمبر 2018. ويقوم المقترح الحالي بالسؤال عن رأي أصحاب الحصص فيما إذا كان ينبغي المضي قدما في التخطيط. في حالة الموافقة، سيتم تقديم اقتراح آخر مع تفاصيل خاصة بالتنفيذ. لم يبدأ التصويت بعد.
-* يقترح [موقع المجتمع للديكريد](https://proposals.decred.org/proposals/fb8e6ca361c807168ea0bd6ddbfb7e05896b78f2576daf92f07315e6f8b5cd83) بواسطة karamble@ موقعا يجمع مصادر متعددة المحتوى للديكريد مثل المقالات وأشرطة الفيديو والبث الصوتي الرقمي وتقارير الفعاليات والتجار.  تم بناء النموذج الأولي بالفعل بواسطة  karamble@ ويسعى الاقتراح للحصول على 6 آلاف دولار لتمويل الموقع لمدة 6 أشهر. انتهى التصويت بنسبة موافقة %72.5 بنعم، مع تصويت  %33 من التذاكر المؤهلة.
-* تسعى acean  [لدمج الديكريد على منصة التبادل IDAX](https://proposals.decred.org/proposals/60adb9c0946482492889e85e9bce05c309665b3438dd85cb1a837df31fbf57fb) المتواجدة في منغوليا  للحصول على 1000 DCR لإضافة الزوج DCR/BTC للتبادل على منصتها. التصويت انتهى ورُفض الاقتراح بنسبة أصوات بلغت %25 بنعم، مع مشاركة %23.5 من تذاكر التصويت. 
-* عملية [إدماج الديكريد بمحفظة Trust Wallet](https://proposals.decred.org/proposals/2ababdea7da2b3d8312a773d477272135a883ed772ba99cdf31eddb5f261d571) لoregonisaac@ تقترح دمج الديكريد في محفظة Trust "اللامركزية بالكامل" مقابل حوالي 3300 دولار و 100 دولار كدعم شهري.  لم يبدأ التصويت بعد.
+* يقترح [موقع المجتمع للديكريد](https://proposals.decred.org/proposals/fb8e6ca361c807168ea0bd6ddbfb7e05896b78f2576daf92f07315e6f8b5cd83) بواسطة karamble@ موقعا يجمع مصادر متعددة المحتوى للديكريد مثل المقالات وأشرطة الفيديو والبث الصوتي الرقمي وتقارير الفعاليات والتجار.  تم بناء النموذج الأولي بالفعل بواسطة  karamble@ ويسعى الاقتراح للحصول على 6 آلاف دولار لتمويل الموقع لمدة 6 أشهر. انتهى التصويت بنسبة موافقة 72.5٪  بنعم، مع تصويت  33٪  من التذاكر المؤهلة.
+* تسعى acean  [لدمج الديكريد على منصة التبادل IDAX](https://proposals.decred.org/proposals/60adb9c0946482492889e85e9bce05c309665b3438dd85cb1a837df31fbf57fb) المتواجدة في منغوليا  للحصول على 1000 DCR لإضافة الزوج DCR/BTC للتبادل على منصتها. التصويت انتهى ورُفض الاقتراح بنسبة أصوات بلغت 25٪  بنعم، مع مشاركة 23.5٪  من تذاكر التصويت. 
+* عملية [إدماج الديكريد بمحفظة Trust Wallet](https://proposals.decred.org/proposals/2ababdea7da2b3d8312a773d477272135a883ed772ba99cdf31eddb5f261d571) لoregonisaac@ تقترح دمج الديكريد في محفظة Trust "اللامركزية بالكامل" مقابل حوالي 3,300 دولار و 100 دولار كدعم شهري.  لم يبدأ التصويت بعد.
 
 نشاط بوليتيا ما بين 1-28 فبراير: 
 
 * تم تقديم 7 مقترحات جديدة، وبدأ التصويت على 5 منها. 
 * 300 تعليق على مقترحات بوليتييا من 46 مستخدم مختلف (مفاتيح عامة).
-* 1006 تصويت موافقة/رفض على تعليقات من 56 مصوت مختلف (مفاتيح عامة).
-* 748 صوت  بنعم (%70) و 258 صوت بلا (%30). 
+* 1,006 تصويت موافقة/رفض على تعليقات من 56 مصوت مختلف (مفاتيح عامة).
+* 748 صوت  بنعم (70٪ ) و 258 صوت بلا (30٪). 
 
 إحصائيات جميع الأوقات اعتبارًا من 28 فبراير 2019:
 
 * 802 تعليق على مقترحات بوليتييا من 113 مستخدم مختلف (مفاتيح عامة).
-* 2785 صوت بالموافقة/الرفض على تعليقات من 122 مصوت مختلف (مفاتيح عامة). 
-* 2336 صوت  بنعم (%80) و 449 صوت بلا (%20).
-* هناك 32 مستخدم صوتوا على التعليقات ولكنهم لم يتركوا أي تعاليق، وقد قاموا مجتمعين بالإدلاء ب 374 صوتًا (%13.4 من الإجمالي).
-* حوالي 238 تعليق (%30) تم التصويت عليها من قبل مؤلفيها.
+* 2,785 صوت بالموافقة/الرفض على تعليقات من 122 مصوت مختلف (مفاتيح عامة). 
+* 2,336 صوت  بنعم (80٪) و 449 صوت بلا (20٪).
+* هناك 32 مستخدم صوتوا على التعليقات ولكنهم لم يتركوا أي تعاليق، وقد قاموا مجتمعين بالإدلاء ب 374 صوتًا (13.4٪ من الإجمالي).
+* حوالي 238 تعليق (30٪) تم التصويت عليها من قبل مؤلفيها.
 
 شكرا لrichardred@ للتوليد الأتوماتيكي للإحصائيات المذكورة أعلاه.
 
@@ -133,15 +133,15 @@
 - أخرى.
 أرقام توزيع التجمع تقريبية ولا يمكن تحديدها بدقة. 
 
-التحصيص: بلغ متوسط سعر التذكرة لمدة 30 يومًا 111.6 DCR بزيادة 2.2 في 1 مارس حسب dcrstats.com. وقد تراوح السعر ما بين 98.4-124.1  DCR  للتذكرة. كما بلغ  المبلغ المقفل 4.36-4.56 مليون DCR، أي ما يعادل %46.4-48.7 من الإجمالي المتاح. 
+التحصيص: بلغ متوسط سعر التذكرة لمدة 30 يومًا 111.6 DCR بزيادة 2.2 في 1 مارس حسب dcrstats.com. وقد تراوح السعر ما بين 98.4-124.1  DCR  للتذكرة. كما بلغ  المبلغ المقفل 4.36-4.56 مليون DCR، أي ما يعادل 46.4-48.7٪ من الإجمالي المتاح. 
 
-شهدت أسعار التذاكر وحجم المجمع بعض التقلبات في شهر فبراير.  وقد رفعت 1265 تذكرة تم شراؤها في فترة 11 فبراير من حجم المجمع إلى حوالي 41670 تذكرة والسعر إلى 119.4 DCR في 7 زيادات متتالية. وقد أعقب ذلك سلسلة من 10 تخفيضات في الأسعار إلى 98.4 DCR، عندما انخفض المجمع لفترة وجيزة إلى أقل من 40 ألف تذكرة (آخر مرة حدث هذا في أكتوبر 2017). وقد تم شراء 2797 تذكرة مذهلة في القاع بنظام النافذة الواحدة، من أصل 2880 كحد أقصى ممكن. وقد لاحظ [ImacallyouJawdy@](https://twitter.com/ImacallyouJawdy/status/1098296540290924544) أنه تم تأمين 282 ألف  DCR في هذه النافذة وحدها  أو ما يعادل %3  من العرض الحالي من التذاكر. ونتيجة لذلك، قفز سعر التذكرة إلى 124.1 DCR، وهو أعلى مستوى جديد على الإطلاق منذ نشر [خوارزمية صعوبة الحصة](https://github.com/decred/dcps/blob/master/dcp-0001/dcp-0001.mediawiki) الجديدة في يوليو 2017. ارتفع عدد التذاكر إلى 42174 تذكرة عندما تم تأمين %48.7 من إمدادات DCR - وهو أعلى مستوى جديد على الإطلاق و %0.7 + من الذروة السابقة في 7 يونيو 2018. شكرا ل [charts.dcr.farm](https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1) للرسوم البيانية الحادة.
+شهدت أسعار التذاكر وحجم المجمع بعض التقلبات في شهر فبراير.  وقد رفعت 1,265 تذكرة تم شراؤها في فترة 11 فبراير من حجم المجمع إلى حوالي 41,670 تذكرة والسعر إلى 119.4 DCR في 7 زيادات متتالية. وقد أعقب ذلك سلسلة من 10 تخفيضات في الأسعار إلى 98.4 DCR، عندما انخفض المجمع لفترة وجيزة إلى أقل من 40 ألف تذكرة (آخر مرة حدث هذا في أكتوبر 2017). وقد تم شراء 2,797 تذكرة مذهلة في القاع بنظام النافذة الواحدة، من أصل 2880 كحد أقصى ممكن. وقد لاحظ [ImacallyouJawdy@](https://twitter.com/ImacallyouJawdy/status/1098296540290924544) أنه تم تأمين 282 ألف  DCR في هذه النافذة وحدها  أو ما يعادل 3٪   من العرض الحالي من التذاكر. ونتيجة لذلك، قفز سعر التذكرة إلى 124.1 DCR، وهو أعلى مستوى جديد على الإطلاق منذ نشر [خوارزمية صعوبة الحصة](https://github.com/decred/dcps/blob/master/dcp-0001/dcp-0001.mediawiki) الجديدة في يوليو 2017. ارتفع عدد التذاكر إلى 42174 تذكرة عندما تم تأمين 48.7٪ من إمدادات DCR - وهو أعلى مستوى جديد على الإطلاق و 0.7٪  + من الذروة السابقة في 7 يونيو 2018. شكرا ل [charts.dcr.farm](https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1) للرسوم البيانية الحادة.
 
-العقد: اعتبارًا من 1 مارس، كان هناك 205 عقد استماع عمومي و297 عقدة عادية حسب [dcred.eu](https://dcred.eu/nodeStats).  توزيع الإصدار: بناء التطوير النسخة 1.5.0:  %8.6 (%4.3+)، النسخة النهائية 1.4.0: %43  (%43 +)، بناء التطوير و إصدار الصيغة المرشحة النسخة 1.4.0 :  %7 (%6-)، النسخة 1.4.0 : %23 (%32-)، النسخة 1.2.0 : %10 ( %4-)، النسخة  1.1.2: %4 (%4-)، النسخة 1.1.0 : %2 (%1-).
+العقد: اعتبارًا من 1 مارس، كان هناك 205 عقد استماع عمومي و297 عقدة عادية حسب [dcred.eu](https://dcred.eu/nodeStats).  توزيع الإصدار: بناء التطوير النسخة 1.5.0:  8.6٪  (4.3٪ +)، النسخة النهائية 1.4.0: 43٪ (43٪ +)، بناء التطوير و إصدار الصيغة المرشحة النسخة 1.4.0 :  7٪ (6٪ -)، النسخة 1.4.0 : 23٪  (32٪ -)، النسخة 1.2.0 : 10٪ (4٪ -)، النسخة  1.1.2: 4٪ (4٪ -)، النسخة 1.1.0 : 2٪  (1٪-).
 
 تم تلبية [عتبات التحديث](https://voting.decred.org/) لـتعدين إثبات العمل POW وإثبات الحصة POS وتأمين التصويت بالإجماع للبدء في حوالي 14 مارس. شكرًا لكل من قام بتحديث العقد، وأيضًا الأشخاص الذين بلغوا مجمع التعدين ومشغلي موفر خدمة التصويت عن طريق قنوات مختلفة وطلب منهم التحديث.
 
-لم يبدأ التصويت بعد ولكن كتل الأصوات تشير بالفعل إلى إختيارهم لبرنامج fixlnseqlocks. اعتبارا من 4 مارس، [كان هناك](https://matrix.to/#/!wSdymYrEpBhsWlDJuk:decred.org/$155168912215429iStcp:decred.org) ثمانية آلاف و خمسمائة و ثلاثة  صوت بنعم و واحد بلا.  "هذا مناقض ... إنه على الأقل دليل على أن الزر'لا' يعمل". - jz@.
+لم يبدأ التصويت بعد ولكن كتل الأصوات تشير بالفعل إلى إختيارهم لبرنامج `fixlnseqlocks`. اعتبارا من 4 مارس، [كان هناك](https://matrix.to/#/!wSdymYrEpBhsWlDJuk:decred.org/$155168912215429iStcp:decred.org) ثمانية آلاف و خمسمائة و ثلاثة  صوت بنعم و واحد بلا.  "هذا مناقض ... إنه على الأقل دليل على أن الزر'لا' يعمل". - jz@.
 
 ## عمليات الإدماج
 
@@ -173,7 +173,7 @@
 
 ## الإنتشار
 
-في شهر فبراير، عرض Dustorf@ خططه [للتسويق](https://proposals.decred.org/proposals/c84a76685e4437a15760033725044a15ad832f68f9d123eb837337060a09f86e) و[الفعاليات](https://proposals.decred.org/proposals/d3e7f159b9680c059a3d4b398de2c8f6627108f28b7d61a3f10397acb4b5e509) لما تبقى من سنة 2019، وتم تمرير هذه الخطط بواسطة تصويت أصحاب الحصص. هذا تطور مثير يضفي المزيد من اللامركزية على الديكريد من خلال تحويل المزيد من السيطرة المباشرة على الإنفاق إلى أصحاب الحصص. كانت هناك مناقشة قوية والعديد من الأسئلة الجيدة، وقد تمت الموافقة على المقترحات بنسبة %83 وبنسبة %89 من تصويت التذاكر.
+في شهر فبراير، عرض Dustorf@ خططه [للتسويق](https://proposals.decred.org/proposals/c84a76685e4437a15760033725044a15ad832f68f9d123eb837337060a09f86e) و[الفعاليات](https://proposals.decred.org/proposals/d3e7f159b9680c059a3d4b398de2c8f6627108f28b7d61a3f10397acb4b5e509) لما تبقى من سنة 2019، وتم تمرير هذه الخطط بواسطة تصويت أصحاب الحصص. هذا تطور مثير يضفي المزيد من اللامركزية على الديكريد من خلال تحويل المزيد من السيطرة المباشرة على الإنفاق إلى أصحاب الحصص. كانت هناك مناقشة قوية والعديد من الأسئلة الجيدة، وقد تمت الموافقة على المقترحات بنسبة 83٪ وبنسبة 89٪ من تصويت التذاكر.
 
 بميزانية معتمدة، بدأ العمل بجدية في نطاق المقترحات. ويجري التخطيط لأسبوع بلوكشين في نيويورك، والذي يتزامن مع توافق الإجماع. وينبغي الإعلان عن مزيد من المعلومات في غضون أسبوعين عن هذه الخطط.
 
@@ -204,8 +204,8 @@
 الحضور:
 
 * [TabConf](https://tabconf.com/) في أتلانتا، الولايات المتحدة الأمريكية. joshuam@ [أشار](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15497319564677Cmutw:decred.org): إلى أن  "Tabconf كان رائعا. جمهور نشط للغاية - أفضل الأسئلة التي تلقيتها في مؤتمر حتى الآن ".
-* [حفلة الحرم الجامعي](http://brasil.campus-party.org/cpbr12/patrocinadores/) في ساو باولو، البرازيل. مر حوالي 60،000 شخص بالفعالية والتي استمرت 24 ساعة في اليوم لمدة 6 أيام.  كانت الديكريد العملة الرقمية الوحيدة المشاركة رسميًا مع وجود مساحة خاصة لتقديم المحاضرات والدروس.  وحضر جميع مطوري البرازيل المتعاقدين، وقدموا ما مجموعه 6 محادثات و3  [ورشات عمل](https://twitter.com/matheusd_tech/status/1096434162091937792). قدم jy-p@ عرض [أمن العملات الرقمية وقابلية التكيف](https://www.youtube.com/watch?v=SMiHku6GGmI).  كانت هناك بعض المشكلات مثل نقل منطقة الديكريد وتقليصها (الشيء الذي حدث لكل المشاركين تقريبًا) وسوء تنظيم الترجمات - تم أخذ كل هذا في الاعتبار للتخطيط المستقبلي.  انظر [التقرير الشامل](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$155200602520229ditLj:decred.org) ل emiliomann@ والملاحظات التي كتبها matheusd@. ([الصورة](https://twitter.com/matheusd_tech/status/1095836141104828416))
-* ليلة الحب في غانا. نظمها George Pro@. نظرًا لمعرفة 90% من المشركين للبتكوين، تمكن المقدمون من تخطي الأساسيات وإبراز الميزات الفريدة لـلديكريد. وكان أحد الأسئلة الشائعة هو أين يمكن تحويل DCR إلى العملة المحلية. ([الصور](https://twitter.com/deCRED_Ghana/status/1096714039978266624))
+* [حفلة الحرم الجامعي](http://brasil.campus-party.org/cpbr12/patrocinadores/) في ساو باولو، البرازيل. مر حوالي 60,000 شخص بالفعالية والتي استمرت 24 ساعة في اليوم لمدة 6 أيام.  كانت الديكريد العملة الرقمية الوحيدة المشاركة رسميًا مع وجود مساحة خاصة لتقديم المحاضرات والدروس.  وحضر جميع مطوري البرازيل المتعاقدين، وقدموا ما مجموعه 6 محادثات و3  [ورشات عمل](https://twitter.com/matheusd_tech/status/1096434162091937792). قدم jy-p@ عرض [أمن العملات الرقمية وقابلية التكيف](https://www.youtube.com/watch?v=SMiHku6GGmI).  كانت هناك بعض المشكلات مثل نقل منطقة الديكريد وتقليصها (الشيء الذي حدث لكل المشاركين تقريبًا) وسوء تنظيم الترجمات - تم أخذ كل هذا في الاعتبار للتخطيط المستقبلي.  انظر [التقرير الشامل](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$155200602520229ditLj:decred.org) ل emiliomann@ والملاحظات التي كتبها matheusd@. ([الصورة](https://twitter.com/matheusd_tech/status/1095836141104828416))
+* ليلة الحب في غانا. نظمها George Pro@. نظرًا لمعرفة 90٪ من المشركين للبتكوين، تمكن المقدمون من تخطي الأساسيات وإبراز الميزات الفريدة لـلديكريد. وكان أحد الأسئلة الشائعة هو أين يمكن تحويل DCR إلى العملة المحلية. ([الصور](https://twitter.com/deCRED_Ghana/status/1096714039978266624))
 * [كيفية الحفاظ على تشفير أمان عملاتك الرقمية](https://www.meetup.com/Decred-Australia/events/258211699/)، ملبورن، أستراليا.  ناقش عشاق العملة الرقمية في أستراليا أفضل الممارسات الأمنية ومعايير الأمان الخاصة بـالديكريد. و[أشار](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15504942691141LtOxa:decred.org) Zohand@:  "كانت ردود الفعل رائعة ، و يرغب الرفاق من coinstop و CTRL إدارة الفعالية مرة أخرى في غضون شهرين.". ([الصور](https://twitter.com/DecredAustralia/status/1097478053763018752))
 * [الديكريد في 30 دقيقة](https://www.eventbrite.com/e/decred-en-30-minutos-tickets-55764142050) في مكسيكو سيتي، المكسيك.  [ذكر](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15517155592047249xtYGy:matrix.org) elian@:  "كان أول لقاء حيث كان الجميع  على إطلاع عن الديكريد بشكل جيد جدا ، كنا 7 في المجموع. سار العرض التقديمي بشكل أسرع لأن الحاضرين عرفوا معظم المحتوى الأساسي مقدمًا، لذا ذهبنا لمناقشة قضايا أكثر تعقيدًا مثل التحديات التي تواجه الإدارة اللامركزية وأفضل طريقة لمشاركة التذاكر والتطورات المستقبلية التي تحدث في المشروع مثل الشبكة البرقية، إدماج المدفوعات وأحدث الفعاليات، والتسويق ومقترحات المجتمع في بوليتيا.  كان من اللطيف جدا أن أقابل متحمسي الـDCR  في المكسيك. (...) أعتقد أننا بعيدون عن رؤية العملات الرقمية كما MoE في المكسيك ولكن بالتأكيد الفضاء يتحرك بسرعة.  في الوقت الحالي، هناك عدد أكبر من المكسيكيين على اتصال بالعملات الرقمية أكثر مما هم على اتصال بأسواق الأسهم في البلاد، وهذا مؤشر جيد للغاية ". ([الصور](https://twitter.com/DecredESP/status/1102594478664232960))
 * محاضرة في جامعة UAEM في إكيتبيك، المكسيك. [شارك](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$1551994219193770GeoIk:matrix.org) elian@: "لقد تحدثت عن تاريخ المال، الإنترنت، بلوكشين البتكوين، والبلوكشين الهجين للديكريد وكيفية العمل في صناعات العملات الرقمية والبلوكشين.   كان الجميع مفتونين بالابتكار في العملات الرقمية والبلوكشين، سواء الطلاب أو المدرسين.  وكان الجمهور مكونًا بشكل أساسي من طلاب علوم الكمبيوتر. وقد تمحورت الأسئلة الرئيسية حول ما هو المال، وكيفية تقييم  العملات الرقمية، وما هي فرص العمل المحتملة للخريجين الجدد في هذا المجال. (...) إن إجراء محادثات في الجامعات أمر هام بالنسبة لي لأنني أعلم أن الجيل القادم من المطورين والمحامين والمحاسبين وغيرهم، الذين سيعملون في هذه الصناعة، يتوقون لمعرفة المزيد عن الفرص المتاحة التي تجلبها هذه الصناعة. كان المعلمون متحمسين جدًا لعرض هذه المواد على طلابهم لأنه ليس من السهل الحصول على مثل هذه المحادثات عالية التقنية للجامعات التي ليست في وسط المدينة. ".
@@ -228,7 +228,7 @@
 * تقييم الديكريد بواسطة TokenGazer (الترجمة الصينية، [qq.com](https://mp.weixin.qq.com/s/7rMaTYXIhIpO37qiIvJX_A)، _فوت في عدد يناير_) - تم تقييم الديكريد ب4.2.
 * ما هي أفضل عملة رقمية بجوار البتكوين؟ الإجابة بواسطة Pavel Svitek على ([quora.com](https://www.quora.com/Which-one-is-the-best-cryptocurrency-next-to-bitcoin/answer/Pavel-Svitek)). شكرا لPavel لتقديمه للديكريد على Quora.
 * لا مزيد من التداول أو رسوم الإدراج؟ أصدر الديكريد مقترحا جديدا لDEX بواسطة Leslie Ankney على ([forbes.com](https://www.forbes.com/sites/leslieankney/2019/02/04/no-more-trading-or-listing-fees-decred-releases-new-dex-proposal/))
-* كم سيستمر موسم شتاء العملات الرقمية؟ قمنا بسؤال 3 خبراء بواسطة Julia Herbst على ((breakermag.com](https://breakermag.com/what-the-longest-ever-bear-market-means-for-crypto/))
+* كم سيستمر موسم شتاء العملات الرقمية؟ قمنا بسؤال 3 خبراء بواسطة Julia Herbst على ([breakermag.com](https://breakermag.com/what-the-longest-ever-bear-market-means-for-crypto/))
 * مع بلوغ الديكريد سنته الثالثة، لا يزال يعمل على اللامركزية الحقيقية بواسطة  DavisZ.Morris على ([breakermag.com](https://breakermag.com/as-decred-turns-three-its-still-set-on-real-decentralization/))
 * مؤسس الديكريد يقترح بناء DEX كبديل عن Binance (مقابلة) بواسطة Liam Kelly على ([cryptoslate.com](https://cryptoslate.com/decred-founder-proposes-dex-binance-interview/))
 * "لقد طلبوا منا 3 ملايين دولار": نظرة من الداخل للإدراج على منصة تبادل العملات الرقمية بواسطة Frank Chaparro على ([theblockcrypto.com](https://www.theblockcrypto.com/2019/02/13/they-asked-us-for-3-million-an-inside-look-into-getting-listed-on-a-crypto-exchange/))
@@ -293,29 +293,29 @@
 
 ## الخارجية ذات الصلة
 
-وثقت [دراسة](https://medium.com/@MoneroCrusher/analysis-more-than-85-of-the-current-monero-hashrate-is-asics-and-each-machine-is-doing-128-kh-s-f39e3dca7d78) للأرقام الخاصة بالمونيرو أنماطا مختلفة لتوزيع الرقم الخاص عندما كانت ASIC تعدن في الشبكة،  فهي تدرس الطرق التي قد يتخذها معدني ASIC لإخفاء وجودهم وكيف يمكن كشفهم. تشير الدراسة إلى أن 85 ٪ من تجزئة المونيرو تأتي من ASIC في وقت الكتابة.
+وثقت [دراسة](https://medium.com/@MoneroCrusher/analysis-more-than-85-of-the-current-monero-hashrate-is-asics-and-each-machine-is-doing-128-kh-s-f39e3dca7d78) للأرقام الخاصة بالمونيرو أنماطا مختلفة لتوزيع الرقم الخاص عندما كانت ASIC تعدن في الشبكة،  فهي تدرس الطرق التي قد يتخذها معدني ASIC لإخفاء وجودهم وكيف يمكن كشفهم. تشير الدراسة إلى أن 85٪ من تجزئة المونيرو تأتي من ASIC في وقت الكتابة.
 
 تم [اكتشاف](https://z.cash/blog/zcash-counterfeiting-vulnerability-successfully-remediated/)  ثغرة مزيفة في Zcash في أوائل 2018. "هذه الثغرة الأمنية خفية لدرجة أنها تهربت من سنوات من التحليل من قبل مصممي التشفير الخبراء الذين يركزون على أنظمة إثبات المعرفة الصفرية و zK-SNARKs.". تم تصحيحه بصمت مع ترقية شبكة Sapling التي حدثت في 28 أكتوبر 2018 ، وقد أوضح هذا [المنشور](https://z.cash/blog/zcash-counterfeiting-vulnerability-successfully-remediated/) في 5 فبراير كيف تم التعامل مع مشكلة عدم الحصانة داخل Zcash وكيف تم اشعار العملات الرقمية المتأثرة الأخرى (مثل Horizen و Komodo). طبيعة تشفير Zcash تجعل من الصعب تحديد ما إذا كان قد تم تزييف أي ZEC أثناء وجود الثغرة الأمنية. يعتقد فريق Zcash الذي بلغ عن الخطأ أنه لم يتم استغلاله لأن "اكتشاف الثغرة الأمنية كان سيتطلب مستوى عال من التطور التقني والتشفير الذي يمتلكه عدد قليل جدًا من الناس."
 
-نشر أحد مطوري Grin [تدوينة](https://www.grin-forum.org/t/solved-early-disappointments/3682) للمنتدى معربًا عن خيبة أمله لأن طلب التبرعات لتمويل أحد المطورين لم يتم ملؤه بعد أسبوعين من اتصال الشبكة - وهدد بتحصيل %20 من المكافآت المخصصة لتمويل عملية التطوير. بعد انتشار الأخبار ، جمعت [الحملة](https://grin-tech.org/yeastplume) بسرعة 67580 يورو ، متجاوزة هدف الـ 55000 يورو. كما [أشارت](https://breakermag.com/as-decred-turns-three-its-still-set-on-real-decentralization/) Breaker Mag : "استقطبت Grin [عشرات الملايين من الدولارات](https://www.coindesk.com/grin-launch-crypto-interest-from-deep-pocketed-investors) في الاستثمار في مجال التعدين ، لكنها واجهت بعض الصعوبات في جمع 62000 دولار فقط للدفع لمطورها الرئيسي لمدة ستة أشهر".
+نشر أحد مطوري Grin [تدوينة](https://www.grin-forum.org/t/solved-early-disappointments/3682) للمنتدى معربًا عن خيبة أمله لأن طلب التبرعات لتمويل أحد المطورين لم يتم ملؤه بعد أسبوعين من اتصال الشبكة - وهدد بتحصيل 20٪ من المكافآت المخصصة لتمويل عملية التطوير. بعد انتشار الأخبار ، جمعت [الحملة](https://grin-tech.org/yeastplume) بسرعة 67,580 يورو ، متجاوزة هدف الـ 55,000 يورو. كما [أشارت](https://breakermag.com/as-decred-turns-three-its-still-set-on-real-decentralization/) Breaker Mag : "استقطبت Grin [عشرات الملايين من الدولارات](https://www.coindesk.com/grin-launch-crypto-interest-from-deep-pocketed-investors) في الاستثمار في مجال التعدين ، لكنها واجهت بعض الصعوبات في جمع 62,000 دولار فقط للدفع لمطورها الرئيسي لمدة ستة أشهر".
 
-يعقد حاملي الإيثيريوم [تبادل إشارات carbonvote](http://www.progpowcarbonvote.com/) حول ما إذا كانوا يريدون تغيير خوارزمية التعدين إلى ProgPow. بدأ التصويت [بمعارضة](https://www.trustnodes.com/2019/02/14/98-of-ethereum-vote-against-progpow) قوية للتغيير (%98 صوتوا بلا) ، لكنه تراجع لاحقًا إلى دعم قوي (%94 صوتوا بنعم) اعتبارًا من 4 مارس (مع نسبة %3 من أصوات ETH المتداولة). في حين أن carbonvote ليس لها مكان رسمي في إدارة الإيثيريوم، إلا أنه يتم استخدام هذه الطريقة بسبب:
+يعقد حاملي الإيثيريوم [تبادل إشارات carbonvote](http://www.progpowcarbonvote.com/) حول ما إذا كانوا يريدون تغيير خوارزمية التعدين إلى ProgPow. بدأ التصويت [بمعارضة](https://www.trustnodes.com/2019/02/14/98-of-ethereum-vote-against-progpow) قوية للتغيير (98٪ صوتوا بلا) ، لكنه تراجع لاحقًا إلى دعم قوي (94٪ صوتوا بنعم) اعتبارًا من 4 مارس (مع نسبة 3٪ من أصوات ETH المتداولة). في حين أن carbonvote ليس لها مكان رسمي في إدارة الإيثيريوم، إلا أنه يتم استخدام هذه الطريقة بسبب:
 
  > لقد لاحظنا الكثير من رسائل المضايقة والقذائف على جانبي المناظرات من حسابات مجهولة على المنتديات، يوتيوب، التيليغرام، gitter، ريديت و التويتر. لا توجد طريقة لمعرفة ما إذا كانت هذه حسابات حقيقية لأناس لديهم بالفعل حصص إقتصادية في الإيثيريوم،  أو ببساطة رسالة مضايقة مزيفة أو حسابات زبائن زائفة ممولة من جانب واحد المناقشة. 
 
-بدأ Tezos [بالتصويت](https://blog.nomadic-labs.com/athens-proposals-injected.html) على [التعديل](https://blog.nomadic-labs.com/athens-our-proposals-for-the-first-voted-amendment.html) الأول لبروتوكوله في 25 فبراير ([دليل بسيط](https://medium.com/tezos-spotlight/tezos-the-first-amendment-a-laymans-guide-7424ef1d3e13) و[دليل تفصيلي](https://medium.com/tezos/amending-tezos-b77949d97e1e) لعملية التعديل). تحتوي عملية التعديل على 4 مراحل، كل منها تدوم 8 "دورات" (تستغرق الدورة حوالي 3 أيام، لذلك تستمر كل مرحلة لمدة 24 يومًا تقريبًا). في المرحلة الأولى ، يقدم bakers المقترحات ويصوتون عليها. يوجد الآن مقترحان يتم تقييمهما في المرحلة الأولى، كلاهما يزيدان من الحد المسموح به للغاز، لكن أحدهما يقلل أيضًا من "الحد الأدنى لحجم اللفة" (مقدار XTZ المطلوب ليكون baker). من المثير للاهتمام أن نلاحظ أن Kialo يتم [إستخدامه](https://www.kialo.com/tezos-protocol-amendment-1-25295) من قبل بعض أعضاء مجتمع Tezos لمناقشة هذه المقترحات. عندما تنتهي المرحلة الأولى ، سيتقدم الاقتراح الأكثر تأييدًا إلى المرحلة الثانية، حيث يجب الموافقة عليه من قبل %80 على الأقل من bakers. إذا تم استيفاء المعايير، يتبع ذلك مرحلة اختبار يتم فيها إنشاء تفرع التيستنيت مع التغييرات المطبقة وتشغيلها لمدة 48 ساعة (قد يتم تشغيل التيستنيت آخر مطابق للمقترح لبقية هذه المرحلة للسماح بمزيد من الاختبارات) . وبعد مرحلة الاختبار، يصوت bakers على ما إذا كان ينبغي تفعيل التغييرات،  مع توفر الأغلبية العظمى بنسبة %80. بعد هذه المرحلة الرابعة يتم تفعيل التغييرات (أو لا) وتبدأ الدورة مرة أخرى بمقترحات جديدة.
+بدأ Tezos [بالتصويت](https://blog.nomadic-labs.com/athens-proposals-injected.html) على [التعديل](https://blog.nomadic-labs.com/athens-our-proposals-for-the-first-voted-amendment.html) الأول لبروتوكوله في 25 فبراير ([دليل بسيط](https://medium.com/tezos-spotlight/tezos-the-first-amendment-a-laymans-guide-7424ef1d3e13) و[دليل تفصيلي](https://medium.com/tezos/amending-tezos-b77949d97e1e) لعملية التعديل). تحتوي عملية التعديل على 4 مراحل، كل منها تدوم 8 "دورات" (تستغرق الدورة حوالي 3 أيام، لذلك تستمر كل مرحلة لمدة 24 يومًا تقريبًا). في المرحلة الأولى ، يقدم bakers المقترحات ويصوتون عليها. يوجد الآن مقترحان يتم تقييمهما في المرحلة الأولى، كلاهما يزيدان من الحد المسموح به للغاز، لكن أحدهما يقلل أيضًا من "الحد الأدنى لحجم اللفة" (مقدار XTZ المطلوب ليكون baker). من المثير للاهتمام أن نلاحظ أن Kialo يتم [إستخدامه](https://www.kialo.com/tezos-protocol-amendment-1-25295) من قبل بعض أعضاء مجتمع Tezos لمناقشة هذه المقترحات. عندما تنتهي المرحلة الأولى ، سيتقدم الاقتراح الأكثر تأييدًا إلى المرحلة الثانية، حيث يجب الموافقة عليه من قبل 80٪ على الأقل من bakers. إذا تم استيفاء المعايير، يتبع ذلك مرحلة اختبار يتم فيها إنشاء تفرع التيستنيت مع التغييرات المطبقة وتشغيلها لمدة 48 ساعة (قد يتم تشغيل التيستنيت آخر مطابق للمقترح لبقية هذه المرحلة للسماح بمزيد من الاختبارات) . وبعد مرحلة الاختبار، يصوت bakers على ما إذا كان ينبغي تفعيل التغييرات،  مع توفر الأغلبية العظمى بنسبة 80٪. بعد هذه المرحلة الرابعة يتم تفعيل التغييرات (أو لا) وتبدأ الدورة مرة أخرى بمقترحات جديدة.
 
-تم [إصدار](https://blog.dash.org/dash-core-v0-13-1-release-5d6e06031ba3) النسخة 0.13.1 ل Dash في 8 فبراير "لتسريع اعتماد Dash Core نسخة 0.13". تم تصميم النسخة 13.1 ل Dash Core لتفعيل [DIP3](https://github.com/dashpay/dips/blob/master/dip-0003.md)، لكن عتبة التفعيل لديه بلغت %80 من كتل الإشارة التي تدعم من المعدنين والعقد الرئيسية في نافذة مدتها 7 أيام قبل بدء التفعيل. وبعد عدم استيفاء هذه المعايير لمدة 24 يوما تقريبا، تقرر أن المعايير صارمة أكثر من اللازم وأن العقد الأساسية للتأشير يمكن إسقاطها. عندما يتبنى عدد كافٍ من المعدنين الجدد إصدار 1.10، سيتم تفعيل التغيير بعد أسبوع واحد (تم [تفعيله](https://blog.dash.org/product-update-february-21-2019-5f067b62df00) في حوالي 26 فبراير). 
+تم [إصدار](https://blog.dash.org/dash-core-v0-13-1-release-5d6e06031ba3) النسخة 0.13.1 ل Dash في 8 فبراير "لتسريع اعتماد Dash Core نسخة 0.13". تم تصميم النسخة 13.1 ل Dash Core لتفعيل [DIP3](https://github.com/dashpay/dips/blob/master/dip-0003.md)، لكن عتبة التفعيل لديه بلغت 80٪ من كتل الإشارة التي تدعم من المعدنين والعقد الرئيسية في نافذة مدتها 7 أيام قبل بدء التفعيل. وبعد عدم استيفاء هذه المعايير لمدة 24 يوما تقريبا، تقرر أن المعايير صارمة أكثر من اللازم وأن العقد الأساسية للتأشير يمكن إسقاطها. عندما يتبنى عدد كافٍ من المعدنين الجدد إصدار 1.10، سيتم تفعيل التغيير بعد أسبوع واحد (تم [تفعيله](https://blog.dash.org/product-update-february-21-2019-5f067b62df00) في حوالي 26 فبراير). 
 
-عقد بروتوكول 0x لZRX [أول](https://blog.0xproject.com/how-to-participate-in-the-zeip-23-vote-eaa861298033) تصويت لحامل الرمز المميز بين 18-25 فبراير. وكان الهدف من التصويت هو الموافقة على [ZEIP-23](https://blog.0xproject.com/zeip-23-trade-bundles-of-assets-fe69eb3ed960) والتمكين من"تجارة حزم من الأصول". وتمت [الموافقة](https://0x.org/vote) على الاقتراح  بـ %99 من الأصوات بنعم بواسطة 5،061،033 ZRX (أي ما يقارب %0.86 من الإجمالي المتداول).
+عقد بروتوكول 0x لZRX [أول](https://blog.0xproject.com/how-to-participate-in-the-zeip-23-vote-eaa861298033) تصويت لحامل الرمز المميز بين 18-25 فبراير. وكان الهدف من التصويت هو الموافقة على [ZEIP-23](https://blog.0xproject.com/zeip-23-trade-bundles-of-assets-fe69eb3ed960) والتمكين من"تجارة حزم من الأصول". وتمت [الموافقة](https://0x.org/vote) على الاقتراح  بـ 99٪ من الأصوات بنعم بواسطة 5,061,033 ZRX (أي ما يقارب 0.86٪ من الإجمالي المتداول).
 
-[بدأ](https://forum.nem.io/t/nem-foundation-update-vote-for-funding-proposal-2019/22007) اقتراح تمويل مؤسسة NEM بالتصويت في 15 فبراير وكان التصويت مفتوحًا لمدة 5 أيام. وقد [مر](https://forum.nem.io/t/vote-for-nem-foundation-funding-proposal-2019-approved-by-the-community/22060) اقتراح التمويل بنسبة تصويت بلغت %90 من الأصوات بنعم و %10 بلا  - مع %4.56 من أصوات "إثبات الأهمية" (طريقة NEM في التأثير على أصحاب النفوذ). تم إجراء التصويت على أساس أن الأغلبية العظمى البالغة %65 من أصوات "نعم" مطلوبة ، وأن %3 على الأقل من النقاط المهمة للشبكة يجب أن تصوت "بنعم" كشرط قانوني. تم التصويت من داخل محفظة NEM عن طريق إرسال معاملات 0 XEM  إلى عناوين نعم أو لا. وكان اقتراح آخر متزامن لتمويل "مختبرات NEM" ناجحًا أيضًا،  مع مستوى مماثل من المشاركة و%98.8 من الموافقة. طالب مقترح مؤسسة NEM بمبلغ 8 ملايين دولار ب XEM (من الصعب العثور على هذا المبلغ، لا يمكن العثور عليه إلا في [عرض تقديمي على مستندات google](https://docs.google.com/presentation/d/1nMR_1ajVcpdGW7g8I0p7ZGh88tZ1SL5RzG5TsLW6Qnk/edit#slide=id.p2)) ، بينما طالب مقترح مختبرات NEM ب 3.27 مليون دولار.  
+[بدأ](https://forum.nem.io/t/nem-foundation-update-vote-for-funding-proposal-2019/22007) اقتراح تمويل مؤسسة NEM بالتصويت في 15 فبراير وكان التصويت مفتوحًا لمدة 5 أيام. وقد [مر](https://forum.nem.io/t/vote-for-nem-foundation-funding-proposal-2019-approved-by-the-community/22060) اقتراح التمويل بنسبة تصويت بلغت 90٪ من الأصوات بنعم و ٪10 بلا  - مع 4.56٪ من أصوات "إثبات الأهمية" (طريقة NEM في التأثير على أصحاب النفوذ). تم إجراء التصويت على أساس أن الأغلبية العظمى البالغة 65٪ من أصوات "نعم" مطلوبة ، وأن 3٪ على الأقل من النقاط المهمة للشبكة يجب أن تصوت "بنعم" كشرط قانوني. تم التصويت من داخل محفظة NEM عن طريق إرسال معاملات 0 XEM  إلى عناوين نعم أو لا. وكان اقتراح آخر متزامن لتمويل "مختبرات NEM" ناجحًا أيضًا،  مع مستوى مماثل من المشاركة و98.8٪ من الموافقة. طالب مقترح مؤسسة NEM بمبلغ 8 ملايين دولار ب XEM (من الصعب العثور على هذا المبلغ، لا يمكن العثور عليه إلا في [عرض تقديمي على مستندات google](https://docs.google.com/presentation/d/1nMR_1ajVcpdGW7g8I0p7ZGh88tZ1SL5RzG5TsLW6Qnk/edit#slide=id.p2)) ، بينما طالب مقترح مختبرات NEM ب 3.27 مليون دولار.  
 
-تم [إصدار](https://blog.aragon.org/aragon-q4-2018-transparency-report/) تقرير شفافية Aragon للربع الأخير من سنة 2018. يقدم هذا التقرير بيان مفصل للإنفاق متعلق بالمشروع. بلغ إجمالي الإنفاق في الربع الأخير من عام 2018 حوالي 1،055،484.43 يورو أو ما يعادلها بالعملات الرقمية، حيث أنفق 268 ألف يورو على الرواتب و 330 ألف يورو على المدفوعات لمقدمي الخدمات و 45 ألف يورو على رعاية / تذاكر الفعاليات و 63 ألف يورو على استضافة مؤتمر AraCon و 260 ألف يورو على فرق  [نيست](https://github.com/aragon/nest) (برنامج المنح).  يصف هذا التقرير أيضًا [خطوات التحوط](https://twitter.com/AragonProject/status/1067349802365739008) المالي التي اتخذتها جمعية أراغون - تبادل بعض من ETH التي جمعت خلال ICO لشراء الأصول الأخرى.
+تم [إصدار](https://blog.aragon.org/aragon-q4-2018-transparency-report/) تقرير شفافية Aragon للربع الأخير من سنة 2018. يقدم هذا التقرير بيان مفصل للإنفاق متعلق بالمشروع. بلغ إجمالي الإنفاق في الربع الأخير من عام 2018 حوالي 1,055,484.43 يورو أو ما يعادلها بالعملات الرقمية، حيث أنفق 268 ألف يورو على الرواتب و 330 ألف يورو على المدفوعات لمقدمي الخدمات و 45 ألف يورو على رعاية / تذاكر الفعاليات و 63 ألف يورو على استضافة مؤتمر AraCon و 260 ألف يورو على فرق  [نيست](https://github.com/aragon/nest) (برنامج المنح).  يصف هذا التقرير أيضًا [خطوات التحوط](https://twitter.com/AragonProject/status/1067349802365739008) المالي التي اتخذتها جمعية أراغون - تبادل بعض من ETH التي جمعت خلال ICO لشراء الأصول الأخرى.
 
-تم السماح للقائمة السوداء التي أصدرها  منتدى EOS للتحكيم الأساسي (ECAF) في يونيو 2018 [بالإنتهاء](https://medium.com/@eos42/proposed-solution-for-a-broken-blacklist-ce1c18bdf81c) عندما تم تدوير كتلة منتج جديد والتي لم تقم بتكوين القائمة السوداء. سمح هذا لأحد العناوين المدرجة في القائمة السوداء بنقل أكثر من 2 مليون EOS. حدثت هذه الهفوة لأن القائمة السوداء قد تم تنفيذها كقائمة من العناوين التي لن يقوم منتجو الكتل بمعالجة معاملاتها، حيث يكون كل مُنتج كتلة مسؤولاً عن الحفاظ على القائمة السوداء يدويًا. إذا لم يكن لدى قائمة أفضل 21 شركة BP قائمة سوداء محدّثة، فإن الحسابات المدرجة في القائمة السوداء تكون عرضة للإفراغ. أحد الحلول التي تم اقتراحها هو "إلغاء المفاتيح" حتى يتم اتخاذ قرار بشأن ما يجب فعله بالأموال المجمدة. ويمثل ما يجب فعله  بالصناديق المدرجة في القائمة السوداء  مشكلة بالفعل بالنسبة لـ EOS ، وقد يتم حل ECAF نفسها إذا مر الاستفتاء المفتوح على "حذف ECAF" (بلغت نسبة التصويت حاليًا %99٪ بنعم مع تصويت %2.4 من EOS).
+تم السماح للقائمة السوداء التي أصدرها  منتدى EOS للتحكيم الأساسي (ECAF) في يونيو 2018 [بالإنتهاء](https://medium.com/@eos42/proposed-solution-for-a-broken-blacklist-ce1c18bdf81c) عندما تم تدوير كتلة منتج جديد والتي لم تقم بتكوين القائمة السوداء. سمح هذا لأحد العناوين المدرجة في القائمة السوداء بنقل أكثر من 2 مليون EOS. حدثت هذه الهفوة لأن القائمة السوداء قد تم تنفيذها كقائمة من العناوين التي لن يقوم منتجو الكتل بمعالجة معاملاتها، حيث يكون كل مُنتج كتلة مسؤولاً عن الحفاظ على القائمة السوداء يدويًا. إذا لم يكن لدى قائمة أفضل 21 شركة BP قائمة سوداء محدّثة، فإن الحسابات المدرجة في القائمة السوداء تكون عرضة للإفراغ. أحد الحلول التي تم اقتراحها هو "إلغاء المفاتيح" حتى يتم اتخاذ قرار بشأن ما يجب فعله بالأموال المجمدة. ويمثل ما يجب فعله  بالصناديق المدرجة في القائمة السوداء  مشكلة بالفعل بالنسبة لـ EOS ، وقد يتم حل ECAF نفسها إذا مر الاستفتاء المفتوح على "حذف ECAF" (بلغت نسبة التصويت حاليًا 99٪ بنعم مع تصويت 2.4٪ من EOS).
 
-تقوم Binance [بإطلاق](https://www.theblockcrypto.com/2019/02/07/binance-moves-away-from-ethereum-as-it-prepares-to-launch-dex/) DEX بناءً على بروتوكول Cosmos Tendermint و DPoS. من المحتمل أن تكون رسوم الإدراج "قريبة من 100000 دولار" "لتقليل عدد المشاريع الاحتيالية". على النقيض من ذلك ، لا يحتوي تصميم ديكريد DEX على أي رسوم إدراج ولا يتطلب وجود سلسلة مفاتيح إضافية لتشغيله.
+تقوم Binance [بإطلاق](https://www.theblockcrypto.com/2019/02/07/binance-moves-away-from-ethereum-as-it-prepares-to-launch-dex/) DEX بناءً على بروتوكول Cosmos Tendermint و DPoS. من المحتمل أن تكون رسوم الإدراج "قريبة من 100.000 دولار" "لتقليل عدد المشاريع الاحتيالية". على النقيض من ذلك ، لا يحتوي تصميم ديكريد DEX على أي رسوم إدراج ولا يتطلب وجود سلسلة مفاتيح إضافية لتشغيله.
 
 منصة التبادل الكندية QuadrigaCX [مدينة](https://www.coindesk.com/quadriga-creditor-protection-filing) لعملائها بمبلغ 190 مليون دولار. وبحسب ما ورد لا يمكن الوصول إلى الأموال بعد وفاة مؤسسها، الذي كان لديه السيطرة الوحيدة أو المعرفة لحل التخزين البارد للتبادل. تم الإغلاق على 500 ألف دولار أخرى من BTC "عن طريق الخطأ" حسب [هذه القصة](https://www.coindesk.com/quadriga-inadvertently-sent-btc-to-dead-ceos-cold-wallet-ey-report). يُظهر مسار الفشل الذي لا ينتهي على الإطلاق في منصات التبادل المركزية مدى تحدي اِلْتِزَام العملات الرقمية.
 
@@ -344,3 +344,6 @@
 - raedah،
 - sambiohazard.
 شكر خاص ل richaredred للمراجعة المكثفة لإدارة فضاء التشفير، ولـ saender للصور الفنية المجردة. 
+
+قم بزيارة مجلة الديكريد الكاملة باللغة الإنجليزية على الرابط التالي: [رابط الصفحة](https://xaur.github.io/decred-news/journal/201902.html).
+الترجمة إلى العربية: butterfly@.
