--- a/journal/201903.md
+++ b/journal/201903.md
@@ -1,3 +1,5 @@
+<div dir="rtl">
+
 # صحيفة الديكريد لشهر مارس 2019
 
 ![abstract art](../img/journal-201903-384.jpg)
@@ -348,3 +350,5 @@
 قم بزيارة مجلة الديكريد باللغة الإنجليزية على الرابط التالي: [رابط الصفحة](https://github.com/xaur/decred-news/blob/master/journal/201903.md).
 
 تمت الترجمة إلى اللغة العربية بواسطة: butterfly@.
+
+</div>
